--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
 script:
   - flake8 .
   - cd tests
-  - coverage run --source=perceval.backends.finoss run_tests.py
+  - coverage run --source=perceval.backends.finos run_tests.py
 
 after_success:
   - coveralls
